--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 title: Hubble's Law
 author: Nicholas Earl based on material from the Cosmic Data Story project
 logo: logo.png
-copyright: 2024
+copyright: "2024"
 
 # Force re-execution of notebooks on each build.
 # See https://jupyterbook.org/content/execute.html
@@ -23,7 +23,7 @@ bibtex_bibfiles:
 # Information about where the book exists on the web
 repository:
   url: https://github.com/nmearl/wsp-hubbles-law  # Online location of your book
-  path_to_book:  # Optional path to your book, relative to the repository root
+#  path_to_book: docs  # Optional path to your book, relative to the repository root
   branch: main  # Which branch of the repository should be used when creating links (optional)
 
 launch_buttons:
@@ -38,3 +38,9 @@ html:
     - <script src="_static/custom.js"></script>
   extra_css:
     - _static/custom.css
+  html_js_files:
+    - https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.4/require.min.js
+
+sphinx:
+  config:
+    mathjax_path: https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
