--- a/_toc.yml
+++ b/_toc.yml
@@ -10,11 +10,15 @@ parts:
   - file: day_one/galaxies-beyond.md
   - file: day_one/debate-resolution.md
   - file: day_one/cosmic-ladder.md
-  - file: day_one/expanding-universe.md
-#- caption: Day 2
+- caption: Day 2
+  chapters:
+  - file: day_two/expanding-universe.md
+  - file: day_two/celestial-coordinates.md
+  - file: day_two/sdss-galaxies.md
+  - file: day_two/velocity_measure.ipynb
+#- caption: Day 3
 #  chapters:
-#  - file: day_two/sdss-galaxies.md
-#  - file: day_two/galaxy_sizes.ipynb
+#  - file: day_three/galaxy_sizes.ipynb
 - caption: Reference
   chapters:
   - file: reference/intro_to_colab_notebooks.ipynb
